--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 		"@typescript-eslint/eslint-plugin": "^5.2.0",
 		"@typescript-eslint/parser": "^5.2.0",
 		"@vapurrmaid/bpm": "^0.1.8",
+		"@vueuse/core": "^7.4.0",
 		"builtin-modules": "^3.2.0",
 		"esbuild": "^0.13.12",
 		"esbuild-plugin-svg": "^0.1.0",
