--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
 		"esbuild": "^0.13.12",
 		"esbuild-plugin-svg": "^0.1.0",
 		"esbuild-plugin-vue3": "^0.3.0",
+		"eslint": "^8.5.0",
+		"eslint-config-prettier": "^8.3.0",
+		"eslint-plugin-vue": "^8.2.0",
 		"obsidian": "^0.12.17",
 		"stylelint": "^14.1.0",
 		"stylelint-config-standard": "^24.0.0",
