Refactor Metronome.vue. Split into sub components.

--- a/.eslintrc
+++ b/.eslintrc
@@ -1,7 +1,7 @@
 {
 	"root": true,
 	"parser": "@typescript-eslint/parser",
-	"plugins": ["@typescript-eslint"],
+	"plugins": ["@typescript-eslint", "import"],
 	"extends": [
 		"eslint:recommended",
 		"plugin:@typescript-eslint/eslint-recommended",
@@ -19,5 +19,19 @@
 		"no-prototype-builtins": "off",
 		"@typescript-eslint/no-empty-function": "off",
 		"vue/script-setup-uses-vars": "error"
+	},
+	"settings": {
+		"import/resolver": {
+			"alias": {
+				"map": [
+					["@", "./src"] //default @ -> ./src alias in Vue, it exists even if vue.config.js is not present
+					/*
+					 *... add your own webpack aliases if you have them in vue.config.js/other webpack config file
+					 * if you forget to add them, eslint-plugin-import will not throw linting error in .vue imports that contain the webpack alias you forgot to add
+					 */
+				],
+				"extensions": [".vue", ".json", ".js"]
+			}
+		}
 	}
 }
