--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
 		"eslint-import-resolver-alias": "^1.1.2",
 		"eslint-plugin-import": "^2.25.3",
 		"eslint-plugin-vue": "^8.2.0",
+		"format-duration": "^1.4.0",
 		"obsidian": "^0.13.11",
+		"parse-duration": "^1.0.2",
 		"sass": "^1.45.1",
 		"stylelint": "^14.2.0",
 		"stylelint-config-standard": "^24.0.0",
