--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
-	"name": "obsidian-sample-plugin",
-	"version": "0.12.0",
-	"description": "This is a sample plugin for Obsidian (https://obsidian.md)",
+	"name": "obsidian-metronome-plugin",
+	"version": "0.8.1",
+	"description": "Add interactive metronomes to your notes.",
 	"main": "main.js",
 	"scripts": {
 		"dev": "node esbuild.config.mjs",
 		"build": "node esbuild.config.mjs production"
 	},
 	"keywords": [],
-	"author": "",
+	"author": "Curt Grimes",
 	"license": "MIT",
 	"devDependencies": {
 		"@hkh12/node-calc": "^4.2.1",
